force-app/main/default/objects/QTB_Price_Schedule__e/QTB_Price_Schedule__e.object-meta.xml
<CustomObject>
    <description>#SFCPQBLG-45 - Price Schedule Event</description>
    <label>Price Schedule</label>
    <pluralLabel>Price Schedule</pluralLabel>
</CustomObject>