force-app/main/default/objects/QTB_Price_Schedule__e/fields/QTB_Account__c.field-meta.xml
<CustomField>
    <fullName>QTB_Account__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>