force-app/main/default/objects/QTB_Price_Schedule__e/fields/QTB_Catalog_Code__c.field-meta.xml
<CustomField>
    <fullName>QTB_Catalog_Code__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>Catalog Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>