force-app/main/default/objects/QTB_Price_Schedule__e/fields/QTB_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>QTB_Customer_Number__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>Customer Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>