force-app/main/default/objects/QTB_Price_Schedule__e/fields/QTB_EndDate__c.field-meta.xml
<CustomField>
    <fullName>QTB_EndDate__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>