force-app/main/default/objects/QTB_Price_Schedule__e/fields/QTB_Fee_Schedule_Description__c.field-meta.xml
<CustomField>
    <fullName>QTB_Fee_Schedule_Description__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>Fee Schedule Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>