force-app/main/default/objects/QTB_Price_Schedule__e/fields/QTB_Fee_Schedule_Expiration_date__c.field-meta.xml
<CustomField>
    <fullName>QTB_Fee_Schedule_Expiration_date__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>Fee Schedule Expiration date</label>
    <type>Date</type>
</CustomField>