force-app/main/default/objects/QTB_Price_Schedule__e/fields/QTB_Flat_Flee_Flag__c.field-meta.xml
<CustomField>
    <fullName>QTB_Flat_Flee_Flag__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>Flat Flee Flag</label>
    <length>5</length>
    <type>Text</type>
</CustomField>