force-app/main/default/objects/QTB_Price_Schedule__e/fields/QTB_Legal_Entity_Country__c.field-meta.xml
<CustomField>
    <fullName>QTB_Legal_Entity_Country__c</fullName>
    <label>Legal Entity Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>