force-app/main/default/objects/QTB_Price_Schedule__e/fields/QTB_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>QTB_Product_Code__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>Product Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>