force-app/main/default/objects/QTB_Price_Schedule__e/fields/QTB_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>QTB_Product_Name__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>