force-app/main/default/objects/QTB_Price_Schedule__e/fields/QTB_Quantity__c.field-meta.xml
<CustomField>
    <fullName>QTB_Quantity__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>