force-app/main/default/objects/QTB_Price_Schedule__e/fields/QTB_StartDate__c.field-meta.xml
<CustomField>
    <fullName>QTB_StartDate__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>