force-app/main/default/objects/QTB_Price_Schedule__e/fields/QTB_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>QTB_Unit_of_Measure__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>Unit of Measure</label>
    <length>100</length>
    <type>Text</type>
</CustomField>